feat: complete MVP UI/UX polish, add missing pages, and fix template routing
- Created missing legal pages (Terms, Privacy, Refunds) and Rides search page.